Achieved Database connectivity from Home Controller Get (FindAll()). Returns StringBuilder to a screen as text. But hey, it works.

--- a/NetCoreHooks/appsettings.json
+++ b/NetCoreHooks/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "LocalDBConnectionString": "Data Source=(localDb)\\MSSqlLocalDB; Initial Catalog=IceCream;Integrated Security=True;"
+  },
   "AllowedHosts": "*"
 }
