Inline HOok for Registration on Studio

--- a/NetCoreHooks/appsettings.json
+++ b/NetCoreHooks/appsettings.json
@@ -9,5 +9,9 @@
   "ConnectionStrings": {
     "LocalDBConnectionString": "Data Source=(localDb)\\MSSqlLocalDB; Initial Catalog=IceCream;Integrated Security=True;"
   },
+  "Okta": {
+    "orgUrl" :  "ericlynchdemo007.oktapreview.com",
+    "apiKey": "00NdGkZc4s2eSsvOd9tVdQq5T68jIkCThG-j2CTgIN"
+  },
   "AllowedHosts": "*"
 }
